--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "node": "^23.11.0",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
   }
